--- a/Client/package.json
+++ b/Client/package.json
@@ -30,6 +30,7 @@
     "@angular/material": "^20.2.9",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@stripe/stripe-js": "^8.4.0",
     "@tailwindcss/postcss": "^4.1.14",
     "nanoid": "^5.1.6",
     "rxjs": "~7.8.0",
